--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
 var count = 12;
+
 $(document).ready(function (){
+		$(".loading").show();
 		$.getJSON('http://pokeapi.co/api/v1/pokemon/?limit=' + count,function(data){
-			LoadItems(data);
+		LoadItems(data);
+		$(".loading").hide();
 	});
 });
 function LoadItems(data)
@@ -23,7 +26,9 @@ var container=$(".wrapper ul");
 										$("#pokemonImage").remove();
 										$("#pokemonName").remove();
 										$("#description").empty();
-										DrawTable(data);	
+										itemElement=document.getElementById("item");
+										itemElement.style.visibility="visible";
+									DrawTable(data);	
 								});
 					
 							});	
@@ -32,21 +37,32 @@ var container=$(".wrapper ul");
 };
 
 function SortByType(obj)
-{	if (!obj) var obj = window.event;
-	obj.cancelBubble = true;
-	if (obj.stopPropagation) obj.stopPropagation();
+{	
 	var pokemonType =$(obj).text();
 	$('.wrapper ul li:not(:contains("'+pokemonType+'"))').hide();
+	resetSortingButton=document.getElementById("resetButton");
+	resetSortingButton.style.visibility="visible";
+	event.stopPropagation();
 }
 
 function ShowNextTwelveItems()
 {
-		count += 12;
-		$.getJSON('http://pokeapi.co/api/v1/pokemon/?limit=' + count,function(data){
-				LoadItems(data);		
+	count += 12;
+	$.getJSON('http://pokeapi.co/api/v1/pokemon/?limit=' + count,function(data){
+		LoadItems(data);		
 
-});
+	});
 }
+
+function ResetSorting()
+{
+	resetSortingButton=document.getElementById("resetButton");
+	resetSortingButton.style.visibility="hidden";
+	$.getJSON('http://pokeapi.co/api/v1/pokemon/?limit=' + count,function(data){
+		LoadItems(data);
+	});
+}
+
 function DrawTable(data)
 {
 	ele = document.getElementById("singleItemInfo");
@@ -72,10 +88,24 @@ function DrawTable(data)
 <title>Pokedex</title>
 </head>
 <body>
-    <style>
+<style>
 * {
   box-sizing: border-box;
 }
+
+html {
+	height: 100%;
+}
+
+body {
+	font-family: 'Open Sans';
+	height: 100%;
+}
+
+button {
+	font-family: inherit;
+}
+
 .flex-container {
   list-style: none;
   display: flex;
@@ -91,10 +121,8 @@ function DrawTable(data)
   padding: 10px;
   width: 32%;
   height: 190px;
-  margin: 20px 2% 0 0;
-  cursor: pointer;
-  
-  
+  margin: 10px 2% 0 0;
+  cursor: pointer;   
   line-height: 10px;
   color: white;
   font-weight: bold;
@@ -110,12 +138,8 @@ function DrawTable(data)
 	height: 100px;
 	margin: 0;
 	display:none;
-	<!-- display: table-cell; -->
+	display: table-cell;
 	vertical-align: middle;
-}
-
-#singleItemInfo > div {
-	background: tomato;
 }
 
 table{
@@ -159,7 +183,7 @@ h1 {
   margin: 0 auto;
   width:600px;
   height:40px;
-    font-size: 2em;
+  font-size: 2em;
   border-radius:2px;
   background:#4EAEF5;
   
@@ -187,35 +211,60 @@ h1 {
   font-weight: bold;
   font-size: 2em;
   padding: 10px;
+  background-color:tomato;
+  visibility:hidden;
 
 }
 
-.side-bar #singleItemInfo {
+.loading {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(185, 23, 23, 0.7);
+	z-index: 100;
+    text-align: center;
+	line-height: 100%;
+}
 
+.loading div {
+	height: 50%;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+
+#resetButton{
+border-radius:5px;
+  visibility:hidden;
 }
 </style>
-<div class="wrapper">
-	<div class="content">
-	
-	<h1>Pokedex</h1>
-		
-		<ul class="flex-container"> 
-		</ul>
-		
-		<div class="buttons">
-			<button class="btn" id="getNextItems" onclick="ShowNextTwelveItems()">Load more</button>
+	<div class="loading">
+		<div>Loading...</div>
+	</div>
+		<div class="wrapper">
+			<div class="content">
+				<h1>Pokedex</h1>
+
+				<button id="resetButton" onclick="ResetSorting()">Reset Sorting</button>
+
+				<ul class="flex-container"> 
+				</ul>
+				
+				<div class="buttons">
+					<button class="btn" id="getNextItems" onclick="ShowNextTwelveItems()">Load more</button>
+				</div>
+			</div>
+			
+		    <div class="side-bar">
+		    	<div id="singleItemInfo">
+					<div id="item">
+						<table id="description">
+						</table>
+					</div>
+			   </div>
+			</div>
 		</div>
-		
-	</div>
-   <div class="side-bar">
-	<div id="singleItemInfo">
-		<div id="item">
-		
-		
-			<table id="description">
-			</table>
-	</div>
-	
-   </div>
-</div>
+	</body>
 </html>
